# chat-app-worker

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: dockerhub.yml
app/: main.py
app/core/: config.py
app/db/: repository.py
app/schemas/: __init__.py  task.py
app/services/: consumer.py  ollama.py  processor.py  redis_store.py
